--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!-- coustom css link -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar-container">
@@ -23,24 +29,274 @@
                 <li class="navbar-item">Home</li>
             </ul>
             <div class="logo">
-                <img src="images/Logo.png" alt="">                 
+                <img src="images/Logo.png" alt="">
             </div>
         </nav>
         <section class="header-container">
             <div class="header-title">
                 <h1>Read Quran Everyday. Add On Your Daily Routine.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Commodo, dictum proin urna risus, quam donec. Lorem 
+                    Commodo, dictum proin urna risus, quam donec. Lorem
                     ipsum dolor sit amet, consectetur </p>
-                    <div>
-                        <button>Read Quran</button>
-                        <button>Quran Audio</button>
-                    </div>
+                <div>
+                    <p>Read Quran</p>
+                    <p>Quran Audio</p>
+                </div>
             </div>
-            <div>
+            <div class="header-img">
                 <img src="images/Vector.png" alt="">
             </div>
         </section>
     </header>
+    <main>
+        <section class="surah-container">
+            <h1 class="title-texts">Read Holy Quran With Translation
+                & Tafsir of Every Ayat</h1>
+            <div>
+                <div>
+                    <p>Show Surah</p>
+                    <p>Show Juz</p>
+                </div>
+                <div>
+                    <input class="search-surah" type="text" placeholder="Search Al-Fatihah">
+                    <span class="search-btn"><i class="fas fa-search"></i></span>
+                </div>
+            </div>
+            <div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+                <div class="all-surahs">
+                    <p>1</p>
+                    <div>
+                        <p class="surah-name">Al-Fatihah</p>
+                        <p>The Opener</p>
+                        <p>Verse 7</p>
+                    </div>
+                    <div>
+                        <span><i class="fas fa-ellipsis-v"></i></span>
+                        <span><i class="fas fa-microphone"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <p class="more-surah-btn">Show All Surah</p>
+            </div>
+        </section>
+        <section class="hajj-container">
+            <div>
+                <h1 class="title-texts">Learn Correctly How
+                    to do Hajj</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Commodo, dictum proin urna risus, quam donec. Lorem
+                    ipsum dolor sit amet, consectetur </p>
+                <p class="read-more-btn">Read More...</p>
+            </div>
+            <div>
+                <img src="images/ei_image.png" alt="">
+            </div>
+        </section>
+        <section class="learn-arabic-container">
+            <div class="learn-arabic-images">
+                <div>
+                    <img style="width: 244px; padding: 13px;" src="images/Rectangle 27.png" alt="">
+                    <img style="width: 253px; height: 272px;" src="images/Rectangle 24.png" alt="">
+                </div>
+                <div style="margin-left: 64px;">
+                    <img style="padding-bottom: 94px; width: 193px; display: inline-block;" src="images/Rectangle 26.png" alt="">
+                    <img style="width: 232px; height: 253px; padding: 13px;" src="images/Rectangle 25.png" alt="">
+                </div>
+            </div>
+            <div>
+                <h1 class="title-texts">Learn Arabic Basics
+                    To Advance </h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Commodo, dictum proin urna risus, quam donec. Lorem
+                    ipsum dolor sit amet, consectetur </p>
+                <div class="learn-arabic-btns">
+                    <p class="read-more-btn">Read More...</p>
+                    <p class="arabic-dictionary"><i class="fas fa-book"></i>Arabic Dictionary</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
